# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  0.6.6  agent.py  app.py
.specify/memory/: constitution.md
backend/: .env.example  main.py  pyproject.toml  retrieve.py
book/: docusaurus.config.js  package-lock.json  sidebars.js
book/.github/workflows/: deploy.yml
book/docs/: intro.md
book/docs/capstone/: _category_.json  cap-1-project-overview.md  cap-2-system-architecture.md  cap-3-voice-input.md  cap-4-navigation.md  cap-5-vision.md  cap-6-manipulation.md  cap-7-integration.md  cap-8-conclusion.md  index.md
book/docs/module-1-ros2/: 1-1-introduction.md  1-2-architecture.md  1-3-rclpy-basics.md  1-4-urdf-fundamentals.md  1-5-humanoid-model.md  1-6-summary.md  _category_.json  index.md
book/docs/module-2-simulation/: 2-1-simulation-concepts.md  2-2-gazebo-setup.md  2-3-physics-simulation.md  2-4-sensor-simulation.md  2-5-unity-introduction.md  2-6-urdf-to-gazebo.md  2-7-summary.md  _category_.json  index.md
book/docs/module-3-isaac/: 3-5-vslam.md  (+8 more)
specs/001-physical-ai-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rag-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/chapter-1-introduction/: spec.md
(+54 files in other folders)
