[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG Pipeline for Physical AI Textbook - Content Ingestion, Embeddings, and Vector Storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=5.0",
    "qdrant-client>=1.7",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "openai-agents>=0.6.6",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
